tests/baselines/reference/APILibCheck.errors.txt
tsserverlibrary.d.ts(8830,53): error TS2552: Cannot find name 'LiteralImportTypeNode'. Did you mean 'LiteralTypeNode'?
typescript.d.ts(4892,53): error TS2552: Cannot find name 'LiteralImportTypeNode'. Did you mean 'LiteralTypeNode'?


==== tests/cases/compiler/index.ts (0 errors) ====
    import ts = require("typescript");
    import tsInternal = require("typescript-internal");
    import tsserverlibrary = require("tsserverlibrary");
    import tsserverlibraryInternal = require("tsserverlibrary-internal");
    
==== tests/cases/compiler/node_modules/typescript/package.json (0 errors) ====
    {
        "name": "typescript",
        "types": "/.ts/typescript.d.ts"
    }
    
==== tests/cases/compiler/node_modules/typescript-internal/package.json (0 errors) ====
    {
        "name": "typescript-internal",
        "types": "/.ts/typescript.internal.d.ts"
    }
    
==== tests/cases/compiler/node_modules/tsserverlibrary/package.json (0 errors) ====
    {
        "name": "tsserverlibrary",
        "types": "/.ts/tsserverlibrary.d.ts"
    }
    
==== tests/cases/compiler/node_modules/tsserverlibrary-internal/package.json (0 errors) ====
    {
        "name": "tsserverlibrary-internal",
        "types": "/.ts/tsserverlibrary.internal.d.ts"
    }
    